# sanatana-sangam

./: .claudeignore  .env.local.example  .env.production  .eslintignore  .gitignore  .mcp.json  AGENTS.md  ANTIGRAVITY.md  APPROVED_AUDIO_PACK.md  APP_STORE_READINESS_AUDIT.md  APP_STORE_REVIEW_NOTES.md  AUDIO_ARCHITECTURE_PLAN.md  BAL_KRISHNA_CONCEPT_BATCH_V2.md  BHAJAN_DISCOVERY_MVP.md  BRAINSTORM_REVIEW.md  CAPACITOR_SETUP.md  CLAUDE.md  COLOR_STRATEGY.md  DEPLOY.md  JYOTISH_STRATEGY.md  LANGUAGE_SUPPORT_PLAN.md  LAUNCH_TRACKER.md  MEDIA_REGISTRY_PLAN.md  ONBOARDING_REDIRECT_LOOP_FOLLOWUP.md  PANCHANG_PRECISION_PLAN.md  PANCHANG_SOURCE_STRATEGY.md  PARAMPARA_PATHSHALA_PLAN.md  PATHSHALA_SOURCE_POLICY.md  PERMISSION_TIMING_AUDIT.md  PRAMANA_CORPUS_ROADMAP.md  PRAMANA_MODULE_MAP.md  PRIVATE_AI_PHASE1_PLAN.md  PRODUCT_CONSOLIDATION_PLAN.md  PRODUCT_LAUNCH_PLAN.md  ROADMAP.md  SCHEMA_ALIGNMENT_AUDIT.md  SHOONAYA_RULES.md  SHOONAYA_WORKFLOW.md  TIRTHA_STRATEGY.md  Tirtha Product Strategy — Shoonaya May 2026.docx  (+52 more)
python/ai_pipeline/: README.md  pramana_eval_status.md  pyproject.toml
python/ai_pipeline/corpus/: buddhist_dhamma_index.json  dharam_veer_index.json  gita_index.json  gurbani_index.json  jain_dharma_index.json  ramayana_index.json  upanishads_index.json  valmiki_ramayana_index.json
python/ai_pipeline/corpus/manifests/: README.md  buddhist_dhamma.json  example_document.json  gita_chapter_1.json  gita_chapter_10.json  gita_chapter_11.json  gita_chapter_12.json  gita_chapter_13.json  gita_chapter_14.json  gita_chapter_15.json  gita_chapter_16.json  jain_dharma.json  (+57 more)
(+1206 files in other folders)
