[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shoonaya-ai-pipeline"
version = "0.1.0"
description = "Phase 1 private AI pipeline scaffold for Shoonaya"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Shoonaya" }
]
dependencies = []

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
